New attempt at dialog

--- a/Game/resources.qrc
+++ b/Game/resources.qrc
@@ -8,5 +8,6 @@
         <file>images/miner.png</file>
         <file>images/worker.png</file>
         <file>images/oilrig.png</file>
+        <file>images/epiclore.png</file>
     </qresource>
 </RCC>
