--- a/Game/dialog.ui
+++ b/Game/dialog.ui
@@ -15,16 +15,56 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <widget class="QSpinBox" name="amountSpinBox"/>
-     </item>
-     <item>
-      <widget class="QLabel" name="enterLabel">
+    <widget class="QLabel" name="infoLabel">
+     <property name="text">
+      <string>Enter player names. Blank field means no player.</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="0" column="0">
+      <widget class="QLabel" name="p1Label">
        <property name="text">
-        <string>Enter the amount of players (1-4)</string>
+        <string>Player 1:</string>
        </property>
       </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLineEdit" name="p1Name"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="p2Label">
+       <property name="text">
+        <string>Player 2:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="p2Name"/>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="p3Label">
+       <property name="text">
+        <string>Player 3:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="p4Label">
+       <property name="text">
+        <string>Player 4:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="p3Name"/>
+     </item>
+     <item row="3" column="1">
+      <widget class="QLineEdit" name="p4Name"/>
      </item>
     </layout>
    </item>
