--- a/Game/dialog.ui
+++ b/Game/dialog.ui
@@ -25,48 +25,14 @@
     </widget>
    </item>
    <item>
-    <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="p1Label">
-       <property name="text">
-        <string>Player 1:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="p1Name"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="p2Label">
-       <property name="text">
-        <string>Player 2:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="p2Name"/>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="p3Label">
-       <property name="text">
-        <string>Player 3:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="p4Label">
-       <property name="text">
-        <string>Player 4:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="p3Name"/>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="p4Name"/>
-     </item>
-    </layout>
+    <layout class="QFormLayout" name="formLayout"/>
+   </item>
+   <item>
+    <widget class="QPushButton" name="addNewPlayerButton">
+     <property name="text">
+      <string>Add new player</string>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
