--- a/Game/mainwindow.ui
+++ b/Game/mainwindow.ui
@@ -200,7 +200,7 @@
                 <bool>false</bool>
                </property>
                <property name="styleSheet">
-                <string notr="true">color: rgb(46, 52, 54)</string>
+                <string notr="true"/>
                </property>
               </widget>
              </item>
@@ -249,6 +249,9 @@
                  <height>5355</height>
                 </size>
                </property>
+               <property name="styleSheet">
+                <string notr="true"/>
+               </property>
               </widget>
              </item>
              <item row="1" column="1">
@@ -295,6 +298,9 @@
                  <width>16777215</width>
                  <height>5355</height>
                 </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
               </widget>
              </item>
@@ -343,6 +349,9 @@
                  <height>5355</height>
                 </size>
                </property>
+               <property name="styleSheet">
+                <string notr="true"/>
+               </property>
               </widget>
              </item>
              <item row="3" column="1">
@@ -389,6 +398,9 @@
                  <width>16777215</width>
                  <height>5355</height>
                 </size>
+               </property>
+               <property name="styleSheet">
+                <string notr="true"/>
                </property>
               </widget>
              </item>
